Add verification intent id to userVerifications model (#38)
